--- a/net-iface.yaml
+++ b/net-iface.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: net-iface
+  name: web
 spec:
   selector:
-    app: net-iface
+    app: web
   type: NodePort
   ports:
     - port: 80
@@ -15,24 +15,46 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: net-iface
+  name: web
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: net-iface
+      app: web
   template:
     metadata:
       labels:
-        app: net-iface
+        app: web
     spec:
       containers:
-      - name: net-iface
-        image: lussa/net-iface:latest
+      - name: web
+        image: lussa/high-load-server:latest
         resources:
           limits:
-            memory: "20Mi"
-            cpu: "50m"
+            memory: "250Mi"
+            cpu: "150m"
         ports:
         - name: http
           containerPort: 80
+
+---
+apiVersion: autoscaling/v2beta1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: net-iface
+spec:
+  minReplicas: 3
+  maxReplicas: 10
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      targetAverageUtilization: 50
+  - type: Resource
+    resource:
+      name: memory
+      targetAverageUtilization: 50
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: web
